search-svc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-svc
  labels:
    app: search-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-svc
  template:
    metadata:
      name: search-svc
      labels:
        app: search-svc
    spec:
      containers:
        - name: search-svc
          image: zafirovic5/search-svc
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: search-clusterip
spec:
  type: ClusterIP
  selector:
    app: search-svc
  ports:
    - port: 80
      targetPort: 80
